--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.1'
 
 services:
   video:
-    restart: always
+    # restart: always
     container_name: video-service
     build: .
     extra_hosts:
-      - "remote-server:192.168.0.106"
+      - "remote-server:192.168.3.2"
